Fix:Prevent contact section overlapping with skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,7 +601,7 @@ section {
   white-space: nowrap;
 }
 #skills {
-  padding-bottom: 80px;
+  padding-bottom: 120px;
   margin-bottom: 100px;
   position:relative;
   overflow: visible;
@@ -811,7 +811,7 @@ body {
 }
 #contact{
   clear: both;
-  margin-top: 0;
+  margin-top: 80;
   padding-top: 50px;
   background-color: #f7f7f7;
   z-index: 1;
